--- a/_posts/2026-02-19-test.md
+++ b/_posts/2026-02-19-test.md
@@ -1,7 +1,7 @@
 ---
 title: "포스트 연습"
 date: 2026-02-19 05:30:00 +0900
-categories: [개발일지, MarkDown] # [대분류, 소분류] 순서입니다.
+categories: [개발일지, Github.io] # [대분류, 소분류] 순서입니다.
 tags: [practice, 연습]
 ---
 
@@ -23,3 +23,14 @@ tags: [practice, 연습]
 ### 3\. 인용문 (`>`)
 중요한 참고 자료나 강조하고 싶은 문장을 넣을 때 씁니다.
 > 이런식으로 말이죵~
+
+### 4\. 글꼴 설정
+
+  * **첫번째 방법:** `'assets/lib/fonts/main.css' 바꾸기`
+   ❌ main.css는 서브모듈인 chirpy-static-assets 안에 있기 때문에 서브모듈 레포지토리에서 변경 후 다시 메인에서 적용해줘야 하기 때문에 번거로움.
+
+  - **두번째 방법:** `'_include/head.html' 파일 만들기`
+   ❌ 파일을 새로 만들어 적용하니 기존 템플릿의 형식을 무시하고 적용이 됨.
+
+  * **세번째 방법:** `'_sass/addon/commons.scss' 파일 만들기`
+  
