--- a/_posts/2026-02-19-test.md
+++ b/_posts/2026-02-19-test.md
@@ -26,11 +26,6 @@ tags: [practice, 연습]
 
 ### 4\. 글꼴 설정
 
-  * **첫번째 방법:** `'assets/lib/fonts/main.css' 바꾸기`
+  * `'assets/lib/fonts/main.css' 바꾸기`
    ❌ main.css는 서브모듈인 chirpy-static-assets 안에 있기 때문에 서브모듈 레포지토리에서 변경 후 다시 메인에서 적용해줘야 하기 때문에 번거로움.
-
-  - **두번째 방법:** `'_include/head.html' 파일 만들기`
-   ❌ 파일을 새로 만들어 적용하니 기존 템플릿의 형식을 무시하고 적용이 됨.
-
-  * **세번째 방법:** `'_sass/addon/commons.scss' 파일 만들기`
   
