--- a/_posts/2026-02-19-test.md
+++ b/_posts/2026-02-19-test.md
@@ -28,4 +28,31 @@ tags: [practice, 연습]
 
   * `'assets/lib/fonts/main.css' 바꾸기`
    ❌ main.css는 서브모듈인 chirpy-static-assets 안에 있기 때문에 서브모듈 레포지토리에서 변경 후 다시 메인에서 적용해줘야 하기 때문에 번거로움.
-  
+
+  - `'assets/css/jekyll-theme-chirpy.scss' 만들기`
+   ⭕ 만든 파일이 테마 원본 파일보다 우선순위를 가지게 되어 원본을 Override 하게 됨.
+
+  ```scss file="assets/css/jekyll-theme-chirpy.scss"
+  ---
+  ---
+
+  @use 'main.bundle'; // 테마 원본 스타일을 우선 가지고 옴.
+
+  // Web형식으로 폰트를 받음.
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
+
+  body, h1, h2, h3, h4, h5, h6,
+  code, pre, .highlight { 
+    font-family: 'Noto Sans KR', sans-serif !important;
+  }
+
+  // 코드가 너무 빽빽해 보이지 않게 자간을 살짝 넓힘.
+  code, pre, .highlight {
+    letter-spacing: 0.03em; 
+  }
+
+  // 코드 블록 내부 테이블 요소 강제 적용.
+  .highlight table td {
+      font-family: 'Noto Sans KR', sans-serif !important;
+  }
+  ```
