--- a/_posts/2026-02-19-test.md
+++ b/_posts/2026-02-19-test.md
@@ -1,8 +1,8 @@
 ---
 title: "포스트 연습"
 date: 2026-02-19 05:30:00 +0900
-categories: [개발일지, Github.io] # [대분류, 소분류] 순서입니다.
-tags: [practice, 연습]
+categories: [DevLog, Github.io] # [대분류, 소분류] 순서입니다.
+tags: [연습]
 ---
 
 # 포스트 연습입니다
