--- a/_posts/2026-02-20-10988.md
+++ b/_posts/2026-02-20-10988.md
@@ -1,8 +1,8 @@
 ---
 title: "백준 10988"
 date: 2026-02-20 00:57:00 +0900
-categories: [Algorithm, 1일1백] # [대분류, 소분류] 순서입니다.
-tags: [알고리즘, 백준]
+categories: [Algorithm, PS] # [대분류, 소분류] 순서입니다.
+tags: [백준]
 ---
 
 ❗ 백준 10988번 문제 : `팰린드롬인지 확인하기`  
