--- a/_posts/2026-02-22-2941.md
+++ b/_posts/2026-02-22-2941.md
@@ -1,8 +1,8 @@
 ---
 title: "백준 2941"
 date: 2026-02-22 01:15:00 +0900
-categories: [Algorithm, 1일1백] # [대분류, 소분류] 순서입니다.
-tags: [알고리즘, 백준]
+categories: [Algorithm, PS] # [대분류, 소분류] 순서입니다.
+tags: [백준]
 ---
 
 ❗ 백준 2941번 문제 : `크로아티아 알파벳`  
